--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/node": "^20.4.5",
     "eslint": "^8.45.0",
+    "prisma": "^5.0.0",
     "tsx": "^3.12.7",
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@prisma/client": "^5.0.0",
     "@types/node-telegram-bot-api": "^0.61.6",
     "dotenv": "^16.3.1",
     "node-telegram-bot-api": "^0.61.0",
